[gd_scene load_steps=21 format=3 uid="uid://vjcalqhdaqe4"]

[ext_resource type="Script" path="res://scripts/botón_de_home_Mapa.gd" id="3_1jcqm"]
[ext_resource type="Texture2D" uid="uid://cxy38ml7i6var" path="res://assets/phone/home_button.png" id="3_opgta"]
[ext_resource type="Texture2D" uid="uid://cbyl7p77epic7" path="res://assets/phone/home_button_pressed.png" id="4_1oxs0"]
[ext_resource type="Script" path="res://scripts/posicion_en_mapa.gd" id="6_oiuj5"]
[ext_resource type="Texture2D" uid="uid://cgg5ww772l85w" path="res://assets/interface/Map_Madrid.png" id="6_vlp22"]
[ext_resource type="Texture2D" uid="uid://c5okcvm606pn4" path="res://assets/interface/map_point.png" id="7_j457d"]
[ext_resource type="Texture2D" uid="uid://b2rnmbi4e43py" path="res://assets/interface/map_search.png" id="7_s10ug"]
[ext_resource type="FontFile" uid="uid://cebjma2udbg7" path="res://assets/fonts/dogicapixel.ttf" id="8_ixqfd"]
[ext_resource type="Texture2D" uid="uid://babclpwsw2r6k" path="res://assets/interface/button_norm.png" id="8_l8g7y"]
[ext_resource type="Script" path="res://scripts/busqueda_del_mapa.gd" id="9_6xe0p"]
[ext_resource type="Texture2D" uid="uid://2oc6jsj8io3y" path="res://assets/interface/button_pressed.png" id="9_7m6iu"]
[ext_resource type="Script" path="res://scripts/boton_ir_del_mapa.gd" id="9_nu6ow"]
[ext_resource type="FontFile" uid="uid://cyoe0lu3ghnvg" path="res://assets/fonts/dogicapixelbold.ttf" id="10_2i2uf"]
[ext_resource type="Texture2D" uid="uid://c48jbmpsr1eun" path="res://assets/interface/car.png" id="11_vpyss"]
[ext_resource type="AudioStream" uid="uid://bcdmq3jeuqfx7" path="res://assets/sounds/car.mp3" id="12_m25x6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aydis"]
size = Vector2(10686.3, 11300.7)

[sub_resource type="Animation" id="Animation_bosjo"]
resource_name = "transicion"
length = 3.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Boton_ir/transicion_entre_escenas/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.566667, 2.02),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1188, 186.25), Vector2(-581, 186.25)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../Boton_ir/transicion_entre_escenas/ColorRect:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 2.05333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1499, 0), Vector2(-275, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../Boton_ir/transicion_entre_escenas/AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pvmjk"]
_data = {
"transicion": SubResource("Animation_bosjo")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ssxss"]

[sub_resource type="Theme" id="Theme_sp4rt"]
LineEdit/constants/outline_size = 0
LineEdit/styles/focus = SubResource("StyleBoxEmpty_ssxss")

[node name="Maps" type="Node2D"]

[node name="App Mapas" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 146.0
offset_bottom = 290.0
mouse_filter = 1

[node name="Fondo" type="Sprite2D" parent="App Mapas"]
z_index = -1
position = Vector2(74, 147)

[node name="Botón de Home" type="TextureButton" parent="App Mapas/Fondo"]
z_index = 5
offset_left = -16.0
offset_top = 99.0
offset_right = 8.0
offset_bottom = 123.0
texture_normal = ExtResource("3_opgta")
texture_pressed = ExtResource("4_1oxs0")
script = ExtResource("3_1jcqm")

[node name="Mascara_Mapa" type="ScrollContainer" parent="."]
offset_left = 4.0
offset_top = 6.0
offset_right = 141.0
offset_bottom = 282.0
mouse_filter = 2

[node name="Control2" type="Control" parent="Mascara_Mapa"]
layout_mode = 2

[node name="Mapa" type="Node2D" parent="Mascara_Mapa/Control2"]
script = ExtResource("6_oiuj5")

[node name="Sprite2D" type="Sprite2D" parent="Mascara_Mapa/Control2/Mapa"]
position = Vector2(-4, -6)
scale = Vector2(0.571632, 0.580964)
texture = ExtResource("6_vlp22")

[node name="Area2D" type="Area2D" parent="Mascara_Mapa/Control2/Mapa"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mascara_Mapa/Control2/Mapa/Area2D"]
position = Vector2(67.5, 112.5)
scale = Vector2(0.195296, 0.198484)
shape = SubResource("RectangleShape2D_aydis")

[node name="marker" type="Sprite2D" parent="Mascara_Mapa/Control2/Mapa"]
visible = false
position = Vector2(68, 135)
scale = Vector2(2.02338, 2.02338)
texture = ExtResource("7_j457d")

[node name="Boton_ir" type="TextureButton" parent="Mascara_Mapa/Control2/Mapa"]
visible = false
offset_left = 27.0
offset_top = 158.0
offset_right = 131.0
offset_bottom = 188.0
scale = Vector2(0.797365, 0.797365)
texture_normal = ExtResource("8_l8g7y")
texture_pressed = ExtResource("9_7m6iu")
script = ExtResource("9_nu6ow")

[node name="Label" type="Label" parent="Mascara_Mapa/Control2/Mapa/Boton_ir"]
layout_mode = 0
offset_left = 35.0
offset_top = 7.0
offset_right = 75.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("10_2i2uf")
theme_override_font_sizes/font_size = 14
text = "Go"

[node name="transicion_entre_escenas" type="AnimationPlayer" parent="Mascara_Mapa/Control2/Mapa/Boton_ir"]
root_node = NodePath("../../Area2D/CollisionShape2D")
libraries = {
"": SubResource("AnimationLibrary_pvmjk")
}

[node name="Sprite2D" type="Sprite2D" parent="Mascara_Mapa/Control2/Mapa/Boton_ir/transicion_entre_escenas"]
z_index = 1000
position = Vector2(1188, 186.25)
scale = Vector2(0.816483, 0.816483)
texture = ExtResource("11_vpyss")

[node name="ColorRect" type="ColorRect" parent="Mascara_Mapa/Control2/Mapa/Boton_ir/transicion_entre_escenas"]
z_index = 999
offset_left = 1499.0
offset_right = 2461.0
offset_bottom = 372.0
color = Color(0, 0, 0, 1)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Mascara_Mapa/Control2/Mapa/Boton_ir/transicion_entre_escenas"]
stream = ExtResource("12_m25x6")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(72, 46)
texture = ExtResource("7_s10ug")

[node name="TextEdit" type="LineEdit" parent="Sprite2D"]
offset_left = -52.0
offset_top = -7.0
offset_right = 33.0
offset_bottom = 6.0
theme = SubResource("Theme_sp4rt")
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0.65834, 0.65834, 0.65834, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/caret_width = 1
theme_override_fonts/font = ExtResource("8_ixqfd")
theme_override_font_sizes/font_size = 6
placeholder_text = "Search location..."
max_length = 20
flat = true
caret_blink = true
script = ExtResource("9_6xe0p")
metadata/_edit_use_anchors_ = true

[connection signal="input_event" from="Mascara_Mapa/Control2/Mapa/Area2D" to="Mascara_Mapa/Control2/Mapa" method="_on_area_2d_input_event"]
[connection signal="button_down" from="Mascara_Mapa/Control2/Mapa/Boton_ir" to="Mascara_Mapa/Control2/Mapa/Boton_ir" method="_on_button_down"]
[connection signal="text_submitted" from="Sprite2D/TextEdit" to="Mascara_Mapa/Control2/Mapa" method="_on_text_submitted"]
[connection signal="text_submitted" from="Sprite2D/TextEdit" to="Sprite2D/TextEdit" method="_on_text_submitted"]
